@@ -11,6 +11,7 @@ import com.tuhospedaje.entity.Reservation;
 import com.tuhospedaje.enums.ReservationStatus;
 import com.tuhospedaje.exception.ResourceNotFoundException;
 import com.tuhospedaje.repository.CategoryRepository;
+import com.tuhospedaje.repository.CityProjection;
 import com.tuhospedaje.repository.FeatureRepository;
 import com.tuhospedaje.repository.LodgingRepository;
 import com.tuhospedaje.repository.PolicyRepository;
@@ -22,7 +23,10 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import jakarta.persistence.criteria.Root;
+import jakarta.persistence.criteria.Subquery;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -33,12 +37,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class LodgingServiceImpl implements LodgingService {
 
     private static final int RANDOM_POOL_SIZE = 100;
     private static final int RANDOM_RESULT_SIZE = 10;
+    private static final int MAX_UNFILTERED_RESULTS = 100;
 
     private final LodgingRepository lodgingRepository;
     private final CategoryRepository categoryRepository;
@@ -58,12 +64,29 @@ public class LodgingServiceImpl implements LodgingService {
         this.ratingRepository = ratingRepository;
     }
 
+    /**
+     * Batch enricher: issues exactly 1 aggregate query for the full list.
+     * Lodgings absent from the query result (no ratings) are post-filled with 0.0/0.
+     */
+    private List<LodgingDTO> enrichWithRatings(List<LodgingDTO> dtos) {
+        if (dtos.isEmpty()) return dtos;
+        Set<Long> ids = dtos.stream().map(LodgingDTO::getId).collect(Collectors.toSet());
+        Map<Long, RatingRepository.RatingAggregate> byId =
+                ratingRepository.aggregateByLodgingIds(ids).stream()
+                        .collect(Collectors.toMap(RatingRepository.RatingAggregate::getLodgingId, a -> a));
+        for (LodgingDTO dto : dtos) {
+            RatingRepository.RatingAggregate a = byId.get(dto.getId());
+            double avg = (a != null && a.getAverage() != null) ? a.getAverage() : 0.0;
+            long count = (a != null) ? a.getCount() : 0L;
+            dto.setRatingCount((int) count);
+            dto.setAverageRating(Math.round(avg * 10.0) / 10.0);
+        }
+        return dtos;
+    }
+
+    /** Single-item adapter — reuses batch enricher (one aggregate query for one id). */
     private LodgingDTO enrichWithRatings(LodgingDTO dto) {
-        int count = ratingRepository.countByLodgingId(dto.getId());
-        Double avg = ratingRepository.findAverageScoreByLodgingId(dto.getId());
-        dto.setRatingCount(count);
-        dto.setAverageRating(avg != null ? Math.round(avg * 10.0) / 10.0 : 0.0);
-        return dto;
+        return enrichWithRatings(new ArrayList<>(List.of(dto))).get(0);
     }
 
     private Category resolveCategory(Long categoryId) {
@@ -85,6 +108,7 @@ public class LodgingServiceImpl implements LodgingService {
     }
 
     @Override
+    @Transactional
     public LodgingDTO save(LodgingDTO dto) {
         if (lodgingRepository.existsByName(dto.getName())) {
             throw new IllegalArgumentException("Ya existe un alojamiento con el nombre: " + dto.getName());
@@ -102,6 +126,7 @@ public class LodgingServiceImpl implements LodgingService {
     }
 
     @Override
+    @Transactional
     public LodgingDTO update(LodgingDTO dto) throws ResourceNotFoundException {
         Lodging lodging = lodgingRepository.findById(dto.getId())
                 .orElseThrow(() -> new ResourceNotFoundException("Alojamiento no encontrado con ID: " + dto.getId()));
@@ -126,6 +151,7 @@ public class LodgingServiceImpl implements LodgingService {
     }
 
     @Override
+    @Transactional
     public Optional<LodgingDTO> delete(Long id) throws ResourceNotFoundException {
         Lodging lodging = lodgingRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Alojamiento no encontrado con ID: " + id));
@@ -134,41 +160,51 @@ public class LodgingServiceImpl implements LodgingService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<LodgingDTO> findAll() {
-        return lodgingRepository.findAll()
+        List<LodgingDTO> dtos = lodgingRepository.findAll(PageRequest.of(0, MAX_UNFILTERED_RESULTS))
+                .getContent()
                 .stream()
-                .map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)))
-                .toList();
+                .map(LodgingDTO::fromEntity)
+                .collect(Collectors.toList());
+        return enrichWithRatings(dtos);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Optional<LodgingDTO> findById(Long id) {
         return lodgingRepository.findById(id).map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<LodgingDTO> findByName(String name) {
-        return lodgingRepository.findByNameContainingIgnoreCase(name)
+        List<LodgingDTO> dtos = lodgingRepository.findByNameContainingIgnoreCase(name)
                 .stream()
-                .map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)))
-                .toList();
+                .map(LodgingDTO::fromEntity)
+                .collect(Collectors.toList());
+        return enrichWithRatings(dtos);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<LodgingDTO> findByCategory(Long categoryId) {
-        return lodgingRepository.findByCategoryId(categoryId)
+        List<LodgingDTO> dtos = lodgingRepository.findByCategoryId(categoryId)
                 .stream()
-                .map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)))
-                .toList();
+                .map(LodgingDTO::fromEntity)
+                .collect(Collectors.toList());
+        return enrichWithRatings(dtos);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Map<String, Object> findAllPaginated(int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
         Page<Lodging> lodgingPage = lodgingRepository.findAll(pageable);
-        List<LodgingDTO> lodgings = lodgingPage.getContent().stream()
-                .map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)))
-                .toList();
+        List<LodgingDTO> dtos = lodgingPage.getContent().stream()
+                .map(LodgingDTO::fromEntity)
+                .collect(Collectors.toList());
+        List<LodgingDTO> lodgings = enrichWithRatings(dtos);
         Map<String, Object> response = new HashMap<>();
         response.put("lodgings", lodgings);
         response.put("currentPage", lodgingPage.getNumber());
@@ -178,6 +214,7 @@ public class LodgingServiceImpl implements LodgingService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<LodgingDTO> findAllRandom() {
         long total = lodgingRepository.count();
         if (total == 0) return List.of();
@@ -186,13 +223,15 @@ public class LodgingServiceImpl implements LodgingService {
         int fetchSize = (int) Math.min(total, RANDOM_POOL_SIZE);
         List<Lodging> pool = new ArrayList<>(lodgingRepository.findAll(PageRequest.of(0, fetchSize)).getContent());
         Collections.shuffle(pool);
-        return pool.stream()
+        List<LodgingDTO> dtos = pool.stream()
                 .limit(RANDOM_RESULT_SIZE)
-                .map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)))
-                .toList();
+                .map(LodgingDTO::fromEntity)
+                .collect(Collectors.toList());
+        return enrichWithRatings(dtos);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<LodgingDTO> search(String city, LocalDate checkIn, LocalDate checkOut,
                                    Integer guests, Long category,
                                    BigDecimal minPrice, BigDecimal maxPrice) {
@@ -219,35 +258,43 @@ public class LodgingServiceImpl implements LodgingService {
                     cb.lessThanOrEqualTo(root.get("pricePerNight"), maxPrice));
         }
 
-        List<Lodging> results = lodgingRepository.findAll(spec);
-
         if (checkIn != null && checkOut != null) {
-            results = results.stream()
-                    .filter(l -> reservationRepository
-                            .findByLodgingIdAndStatus(l.getId(), ReservationStatus.CONFIRMED)
-                            .stream()
-                            .noneMatch(r -> r.getCheckIn().isBefore(checkOut)
-                                    && r.getCheckOut().isAfter(checkIn)))
-                    .toList();
+            spec = spec.and((root, query, cb) -> {
+                Subquery<Long> sub = query.subquery(Long.class);
+                Root<Reservation> r = sub.from(Reservation.class);
+                sub.select(r.get("id"))
+                   .where(
+                       cb.equal(r.get("lodging"), root),
+                       cb.equal(r.get("status"), ReservationStatus.CONFIRMED),
+                       cb.lessThan(r.<LocalDate>get("checkIn"), checkOut),
+                       cb.greaterThan(r.<LocalDate>get("checkOut"), checkIn)
+                   );
+                return cb.not(cb.exists(sub));
+            });
         }
 
-        return results.stream()
-                .map(l -> enrichWithRatings(LodgingDTO.fromEntity(l)))
-                .toList();
+        List<Lodging> results = lodgingRepository
+                .findAll(spec, PageRequest.of(0, MAX_UNFILTERED_RESULTS))
+                .getContent();
+
+        List<LodgingDTO> dtos = results.stream()
+                .map(LodgingDTO::fromEntity)
+                .collect(Collectors.toList());
+        return enrichWithRatings(dtos);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<String> findCities(String query) {
-        return lodgingRepository.findAll().stream()
-                .map(Lodging::getCity)
-                .distinct()
-                .filter(city -> query == null || query.isBlank()
-                        || city.toLowerCase().contains(query.toLowerCase()))
-                .sorted()
+        String filter = (query == null) ? "" : query;
+        return lodgingRepository.findDistinctByCityContainingIgnoreCaseOrderByCityAsc(filter)
+                .stream()
+                .map(CityProjection::getCity)
                 .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public AvailabilityResponse checkAvailability(Long lodgingId, LocalDate checkIn, LocalDate checkOut) {
         List<Reservation> confirmed = reservationRepository
                 .findByLodgingIdAndStatus(lodgingId, ReservationStatus.CONFIRMED);
